--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,5 +1,5 @@
 user django;
-worker_processes 4;
+worker_processes 3;
 pid /var/run/nginx.pid;
 
 server {
@@ -10,16 +10,21 @@ server {
 	
 	# Serve static files directly
 	location /static/ {
-		alias /home/django/web/chromefiddle/static
+		alias /home/django/web/chromefiddle/static;
 		# If asset versioning is used
-		if ($query_string) {
-			expires max;
-		}
+		# if ($query_string) {
+		# 	expires max;
+		# }
 	}
 
 	# Serve user-submitted media files directly
 	location /media/ {
-		alias /home/django/web/chromefiddle/media
+		alias /home/django/web/chromefiddle/media;
+	}
+
+	# Send all non-static file requests to Gunicorn Django server
+	location / {
+
 	}
 }
 
@@ -37,7 +42,7 @@ http {
 	sendfile on;
 	tcp_nopush on;
 	tcp_nodelay on;
-	keepalive_timeout 65;
+	keepalive_timeout 20;
 	types_hash_max_size 2048;
 	# server_tokens off;
 
@@ -60,13 +65,13 @@ http {
 
 	gzip on;
 	gzip_disable "msie6";
+	gzip_comp_level 6;
+	gzip_types text/plain text/html text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 	# gzip_vary on;
 	# gzip_proxied any;
-	# gzip_comp_level 6;
 	# gzip_buffers 16 8k;
 	# gzip_http_version 1.1;
-	# gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 	##
 	# nginx-naxsi config
