Updating nginx configuration with gunicorn server.

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user django;
+user root;
 worker_processes 3;
 pid /var/run/nginx.pid;
 
@@ -24,7 +24,11 @@ server {
 
 	# Send all non-static file requests to Gunicorn Django server
 	location / {
-
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        #proxy_buffering off; # turn off proxy buffering if using async workers
+        proxy_pass http://app_server;
 	}
 }
 
@@ -66,10 +70,10 @@ http {
 	gzip on;
 	gzip_disable "msie6";
 	gzip_comp_level 6;
+	gzip_proxied any;
 	gzip_types text/plain text/html text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 	# gzip_vary on;
-	# gzip_proxied any;
 	# gzip_buffers 16 8k;
 	# gzip_http_version 1.1;
 
