Updated nginx configuration to serve as reverse proxy.

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,6 +1,21 @@
-# user root;
+###########################
+##  Nginx Configuration  ##
+###########################
+
+user django;
 worker_processes 3;
-pid /var/run/nginx.pid;
+
+##
+# Gunicorn is upstream Python WSGI HTTP server
+##
+
+upstream gunicorn {
+	server localhost:8000;
+}
+
+##
+# Nginx serves static files as reverse proxy
+##
 
 server {
 	listen 80;
@@ -10,7 +25,7 @@ server {
 	
 	# Serve static files directly
 	location /static/ {
-		alias /home/django/web/chromefiddle/static;
+		alias /home/django/web/chromefiddle/static/;
 		# If asset versioning is used
 		# if ($query_string) {
 		# 	expires max;
@@ -19,16 +34,16 @@ server {
 
 	# Serve user-submitted media files directly
 	location /media/ {
-		alias /home/django/web/chromefiddle/media;
+		alias /home/django/web/chromefiddle/media/;
 	}
 
 	# Send all non-static file requests to Gunicorn Django server
 	location / {
+		proxy_pass http://127.0.0.1:8000;
+		proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-        #proxy_buffering off; # turn off proxy buffering if using async workers
-        proxy_pass http://app_server;
+        # proxy_redirect off;
+        # proxy_buffering off; # turn off proxy buffering if using async workers
 	}
 }
 
@@ -60,8 +75,8 @@ http {
 	# Logging Settings
 	##
 
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
+	access_log /home/django/web/logs/nginx/access.log;
+	error_log /home/django/web/logs/nginx/error.log;
 
 	##
 	# Gzip Settings
@@ -101,25 +116,3 @@ http {
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
 }
-
-
-#mail {
-#	# See sample authentication script at:
-#	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
-#	# auth_http localhost/auth.php;
-#	# pop3_capabilities "TOP" "USER";
-#	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
-#	server {
-#		listen     localhost:110;
-#		protocol   pop3;
-#		proxy      on;
-#	}
-# 
-#	server {
-#		listen     localhost:143;
-#		protocol   imap;
-#		proxy      on;
-#	}
-#}
