--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 distribute==0.6.35
 dj-database-url==0.2.1
+django-dumpdb==0.1
 django-ganalytics==0.2
-django-suit==0.1.7
+django-suit==0.1.9
 Django==1.4.5
 docutils==0.10
 Fabric==1.6.0
 gunicorn==0.17.2
 httpagentparser==1.2.2
 paramiko==1.10.0
-pip-tools==0.2.1
+pip-tools==0.3.1
 psycopg2==2.4.6
 pycrypto==2.6
 South==0.7.6
+verlib==0.1
