Updated Nginx configuration to serve with Gunicorn.

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -18,32 +18,54 @@ upstream gunicorn {
 ##
 
 server {
+	# Port to listen on
 	listen 80;
-	server_name chromefiddle.com;
+
+	# Serve requests on these domains
+	server_name chromefiddle.com www.chromefiddle.com;
+	
 	charset utf-8;
 	root /home/django/web/chromefiddle;
 	
-	# Serve static files directly
-	location /static/ {
-		alias /home/django/web/chromefiddle/static/;
-		# If asset versioning is used
-		# if ($query_string) {
-		# 	expires max;
-		# }
-	}
+	# Logging settings
+	access_log /home/django/web/logs/nginx/access.log;
+	error_log /home/django/web/logs/nginx/error.log;
 
-	# Serve user-submitted media files directly
-	location /media/ {
-		alias /home/django/web/chromefiddle/media/;
-	}
+	client_max_body_size 0;
 
-	# Send all non-static file requests to Gunicorn Django server
-	location / {
-		proxy_pass http://127.0.0.1:8000;
+	# Attempt to serve static file with Nginx
+	# If no static file is found, pass URL to Gunicorn
+	try_files $uri @gunicorn;
+
+	# Gunicorn rules
+	location @gunicorn {
+		client_max_body_size 0;
+
+		# Proxy to Gunicorn upstream
+		proxy_pass http://gunicorn;
+
+		# URLs should not actually say http://gunicorn
+		proxy_redirect off;
+
+		# If Gunicorn takes > 3 minutes to respond, timeout
+		proxy_read_timeout 3m;
+
+		# Set HTTP headers
 		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_redirect off;
-        # proxy_buffering off; # turn off proxy buffering if using async workers
+	}
+
+	# 404 Error - Page Not Found
+	error_page 404 /404.html;
+	location /404.html {
+		alias /home/django/web/chromefiddle/flags/templates
+	}
+
+	# 500 Error - Server Error
+	error_page 500 /500.html;
+	location /500.html {
+		alias /home/django/web/chromefiddle/flags/templates
 	}
 }
 
@@ -70,13 +92,6 @@ http {
 
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
-
-	##
-	# Logging Settings
-	##
-
-	access_log /home/django/web/logs/nginx/access.log;
-	error_log /home/django/web/logs/nginx/error.log;
 
 	##
 	# Gzip Settings
